--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,28 @@
   padding: 20px;
   margin: 10px;
 }
+
+.cart-item {
+  border: 1px solid black;
+  margin: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cart-picture {
+  width: 80px;
+  height: auto;
+}
+.item-quan {
+  display: flex;
+}
+.item-quan > button {
+  padding: 0 10px;
+  margin: 5px;
+}
+.item-cart-info {
+  border: 3px solid blue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
