made header to easily link to home/shop

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,8 @@
   padding: 0px;
   box-sizing: border-box;
 }
+header {
+  border: 3px solid deeppink;
+  display: flex;
+  justify-content: space-evenly;
+}
